# I-EM_Cloud

./: README.md
i-em-main/: IEM_Arch.drawio.xml  README.md  docker-compose.common.yml  docker-compose.yml  template.env
i-em-main/storage/dumps/: bkp_data_2024-01-21.sql  bkp_schema_2024-01-21.sql  src_schema.sql
i-em-main/storage/scripts/: dump.sh  entrypoint.sh
i-em-main/web-api/: Dockerfile  start.sh
i-em-main/web-api/app/: main.py
i-em-main/web-api/app/api/: common.py  controllers.py  main.py  settings.py
i-em-main/web-api/app/api/database/: crud.py  model.py  schema.py
i-em-main/web-api/app/api/database/model_legacy/: model.py
i-em-main/web-api/iemlib/: LICENCE  pyproject.toml
i-em-main/web-api/iemlib/src/iemlib/database/: model.py
